<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="16dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textViewSignUp"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:padding="4dp"
                android:gravity="center"
                android:textColor="@color/colorPink"
                android:background="@drawable/background_shape_gradient_line"
                android:text="@string/sign_up" />

            <TextView
                android:id="@+id/textViewLogIn"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:padding="4dp"
                android:gravity="center"
                android:textColor="@color/white"
                android:background="@drawable/background_shape_gradient"
                android:text="@string/login" />
        </LinearLayout>

        <RelativeLayout
            android:layout_width="136dp"
            android:layout_height="136dp"
            android:layout_gravity="center"
            android:background="@drawable/background_shape_round"
            android:layout_marginTop="8dp">

            <androidx.cardview.widget.CardView
                android:layout_width="108dp"
                android:layout_height="108dp"
                app:cardCornerRadius="360dp"
                android:layout_centerInParent="true">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    android:src="@drawable/img_girl"
                    android:contentDescription="@string/log_in_image" />
            </androidx.cardview.widget.CardView>

        </RelativeLayout>

        <TextView
            android:id="@+id/textView9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="22sp"
            android:gravity="center"
            android:layout_marginTop="16dp"
            android:text="@string/welcome_back" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/email_phone"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginTop="18dp"
            android:layout_marginBottom="4dp"
            android:textStyle="bold" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            app:hintEnabled="false"
            android:layout_marginEnd="32dp">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:background="#D5E0E4"
                android:drawablePadding="8dp"
                android:drawableStart="@drawable/outline_email_24"
                android:hint="@string/type_here" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="4dp"
            android:textStyle="bold" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            app:hintEnabled="false"
            android:padding="0dp"
            android:layout_marginEnd="32dp">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:background="#D5E0E4"
                android:drawableStart="@drawable/baseline_key_24"
                android:drawablePadding="8dp"
                android:hint="@string/type_here" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/forget_your_password"
            android:gravity="center"
            android:layout_marginStart="32dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="32dp"
            android:textColor="@color/colorPink"
            android:layout_marginBottom="4dp"
            android:textStyle="bold" />

        <CheckBox
            android:id="@+id/checkBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="12dp"
            android:layout_gravity="center"
            android:layout_marginEnd="32dp"
            android:buttonTint="@color/colorPink"
            android:text="@string/terms" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/buttonLogIn"
            android:layout_width="wrap_content"
            android:layout_height="34dp"
            android:layout_gravity="center"
            android:textColor="@color/white"
            android:background="@drawable/background_shape_gradient"
            android:layout_marginBottom="48dp"
            android:textAllCaps="false"
            android:text="@string/login" />
    </LinearLayout>
</androidx.core.widget.NestedScrollView>