<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUpActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="16dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:background="@drawable/background_shape_gradient"
                android:gravity="center"
                android:padding="4dp"
                android:text="@string/sign_up"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/textViewLogIn"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:background="@drawable/background_shape_gradient_line"
                android:gravity="center"
                android:padding="4dp"
                android:text="@string/login"
                android:textColor="@color/colorPink" />
        </LinearLayout>

        <RelativeLayout
            android:layout_width="136dp"
            android:layout_height="136dp"
            android:layout_gravity="center"
            android:layout_marginTop="8dp"
            android:background="@drawable/background_shape_round">

            <TextView
                android:id="@+id/textView8"
                android:layout_width="108dp"
                android:layout_height="108dp"
                android:layout_centerInParent="true"
                android:background="@drawable/background_shape_round_white"
                android:gravity="center"
                android:text="@string/hi"
                android:textColor="@color/colorPink"
                android:textSize="72sp"
                android:textStyle="bold" />
        </RelativeLayout>

        <TextView
            android:id="@+id/textView9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:text="@string/welcome"
            android:textSize="22sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="18dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="4dp"
            android:text="@string/email_phone"
            android:textStyle="bold" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            app:hintEnabled="false">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#D5E0E4"
                android:drawableStart="@drawable/outline_email_24"
                android:drawablePadding="8dp"
                android:hint="@string/type_here"
                android:padding="10dp" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/textView10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="4dp"
            android:text="@string/date_of_birth"
            android:textStyle="bold" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            app:hintEnabled="false">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#D5E0E4"
                android:drawableStart="@drawable/baseline_calendar_month_24"
                android:drawablePadding="8dp"
                android:hint="@string/type_here"
                android:padding="10dp" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="4dp"
            android:text="@string/password"
            android:textStyle="bold" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:padding="0dp"
            app:hintEnabled="false">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#D5E0E4"
                android:drawableStart="@drawable/baseline_key_24"
                android:drawablePadding="8dp"
                android:hint="@string/type_here"
                android:padding="10dp" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="4dp"
            android:text="@string/re_type_password"
            android:textStyle="bold" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:padding="0dp"
            app:hintEnabled="false">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#D5E0E4"
                android:drawableStart="@drawable/baseline_key_24"
                android:drawablePadding="8dp"
                android:hint="@string/type_here"
                android:padding="10dp" />
        </com.google.android.material.textfield.TextInputLayout>

        <CheckBox
            android:id="@+id/checkBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="12dp"
            android:buttonTint="@color/colorPink"
            android:text="@string/terms" />


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/buttonSignUp"
            android:layout_width="wrap_content"
            android:layout_height="34dp"
            android:layout_gravity="center"
            android:layout_marginBottom="48dp"
            android:background="@drawable/background_shape_gradient"
            android:text="@string/sign_up"
            android:textAllCaps="false"
            android:textColor="@color/white" />
    </LinearLayout>
</androidx.core.widget.NestedScrollView>